--- a/jobseek/src/main/resources/application.properties
+++ b/jobseek/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/jobseek?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#server.port=8084 // pour changer la porte d'où s'execute Tomcat
+spring.thymeleaf.cache=false
 
+## Hibernate Properties
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+# Initialize the datasource with available DDL and DML scripts
+spring.datasource.initialization-mode=always
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
