updated server port from 8080 t0 8084

--- a/jobseek/src/main/resources/application.properties
+++ b/jobseek/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#server.port=8084 // pour changer la porte d'où s'execute Tomcat
+#pour changer la porte d'où s'execute Tomcat
+server.port=8084 
 spring.thymeleaf.cache=false
 
 ## Hibernate Properties
