setup authentication and insert new announcement

--- a/jobseek/src/main/resources/application.properties
+++ b/jobseek/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+#TODO : put the following value to none first of going in production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #pour changer la porte d'où s'execute Tomcat
